<resources>
    <string name="app_name">Pčelarski pomoćnik </string>
    <string name="google_map_api_key">AIzaSyBETypVelODVcyN2Pp_aYjSGs65-mDXW9s</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="pcelinjaci">Pčelinjaci</string>
    <string name="bilans_proizvoda">Bilans proizvoda</string>
    <string name="napomene">Napomene</string>
    <string name="istorija_aktivnosti">Istorija aktivnosti</string>
    <string name="osnovni_podaci">Osnovni podaci</string>
    <string name="ime_p_elara">Ime pčelara:</string>
    <string name="gazdinstvo">Gazdinstvo:</string>
    <string name="trenutna_lokacija_p_elinjaka">Trenutna lokacija pčelinjaka:</string>
    <string name="izmeni">Izmeni</string>
    <string name="napomena">Napomena</string>
    <string name="_20_05_2020">20.05.2020</string>
    <string name="tip_napomene">Tip Napomene</string>
    <string name="datum_lecenja">Datum lečenja</string>
    <string name="pogledajte_poslednje_aktivnosti"><![CDATA[Pogledajte poslednje aktivnosti]]></string>
    <string name="naziv_i_redni_broj_p_elinjaka">Naziv i redni broj pčelinjaka</string>
    <string name="tipnapomene">Tip napomene:</string>
    <string name="sacuvaj">Sacuvaj</string>
    <string name="napomenaq">Napomena:</string>
    <string name="unesite_napomenu">Unesite napomenu</string>
    <string name="datum_do">Datum do</string>
    <string name="datum_od">Datum od</string>
    <string name="asd">-</string>
    <string name="izaberite_pcelinjak">Izaberite pčelinjak:</string>
    <string name="prikupljeno_meda_kg">Prikupljeno meda (kg)</string>
    <string name="prikupljeno_polena_kg">Prikupljeno polena (kg)</string>
    <string name="prikupljeno_propolisa_kg">Prikupljeno propolisa (kg)</string>
    <string name="prikupljeno_maticnog_mleca_kg">Prikupljeno matičnog mleča (kg)</string>
    <string name="prikupljeno_perge_kg">Prikupljeno perge (kg)</string>
    <string name="save">Save</string>
    <string name="ukupno_meda">Ukupno meda:</string>
    <string name="ukupn_polena">Ukupn polena:</string>
    <string name="ukupno_propolisa">Ukupno propolisa:</string>
    <string name="ukupno_mati_nog_mle_a">Ukupno matičnog mleča:</string>
    <string name="ukupno_prikupljene_perge">Ukupno prikupljene perge:</string>
    <string name="adresa">Adresa</string>
    <string name="naziv_i_redni_broj_kosnice">Naziv i redni broj košnice</string>
    <string name="istorija_pa_a">Istorija paša</string>
    <string name="nova_pa_a">Nova paša</string>
    <string name="_263_22m">263.22m</string>
    <string name="_1_pcelinjak">1. Pčelinjak</string>
    <string name="latituda_longituda">Latituda,Longituda</string>
    <string name="slikaj">Slikaj</string>
    <string name="dodaj_sliku_iz_galerije">Dodaj sliku iz galerije</string>
    <string name="redni_broj">Redni broj:</string>
    <string name="naziv">Naziv:</string>
    <string name="ukloni_sliku">Ukloni sliku</string>
    <string name="unesite_adresu_grad_ili_po_tanski_broj">Unesite adresu, grad ili poštanski broj</string>
    <string name="redni_broj_i_registarski_broj">Redni broj i registarski broj</string>
    <string name="p_elinjak">Pčelinjak</string>
    <string name="datum_pregleda">Datum pregleda</string>
    <string name="datum_le_enja">Datum lečenja</string>
    <string name="datum_prihrane">Datum prihrane</string>
    <string name="registarski_broj_naziv">Registarski broj/Naziv:</string>
    <string name="godina_proizvodnje_matice">Godina proizvodnje matice:</string>
    <string name="selekcionisana">Selekcionisana</string>
    <string name="prirodna">Prirodna</string>
    <string name="vrsta_matice">Vrsta matice:</string>
    <string name="bolesti">Bolesti:</string>
    <string name="broj_ulica_popunjenih_pcelom">Broj ulica popunjenih pčelom:</string>
    <string name="da_li_je_primeceno">Da li je primećeno:</string>
    <string name="matica">Matica</string>
    <string name="mlado_leglo">Mlado leglo</string>
    <string name="da_li_je_primecen_maticnjak">Da li je primećen maticnjak:</string>
    <string name="primeceno_rojenje">Primećeno rojenje:</string>
    <string name="broj_ramova_sa_leglom">Broj ramova sa leglom:</string>
    <string name="broj_ramova_nsa_vencom_hrane_u_plodistu">Broj ramova \nsa vencom hrane u plodištu:</string>
    <string name="broj_ramova_sa_polenom">Broj ramova sa polenom:</string>
    <string name="broj_ramova_sa_leglom_npodignutih_u_mediste">Broj ramova sa leglom \npodignutih u medište:</string>
    <string name="broj_oduzetih_ramova_nsa_leglom">Broj oduzetih ramova \nsa leglom:</string>
    <string name="broj_ramova_sa_medom_za_vadjenje">Broj ramova sa medom za vađenje:</string>
    <string name="broj_izvadjenih_ramova_sa_medom">Broj izvađenih ramova sa medom:</string>
    <string name="broj_ubacenih_osnova">Broj ubačenih osnova:</string>
    <string name="broj_ubacenih_praznih_ramova">Broj ubačenih praznih ramova:</string>
    <string name="_22_05_2020">22.05.2020</string>
    <string name="p_elinjak_i_ko_nica">Pčelinjak i košnica</string>
    <string name="bolelst">Bolelst:</string>
    <string name="sa_uvaj">Sačuvaj</string>
    <string name="primeni_le_enje_na_ceo_p_elinjak">Primeni lečenje na ceo pčelinjak:</string>
    <string name="le_enje_od">Lečenje od:</string>
    <string name="datum">Datum:</string>
    <string name="izaberite_vrstu_prihrane">Izaberite vrstu prihrane:</string>
    <string name="poga_a">Pogača</string>
    <string name="sirup">Sirup</string>
    <string name="button">Button</string>
    <string name="unesite_kilograme">Unesite kilograme:</string>
    <string name="primeni_na_sve_ko_nice_u_p_elinjaku">Primeni na sve košnice u pčelinjaku:</string>
    <string name="vrsta_i_koli_ina">Vrsta i količina</string>
    <string name="_22_05_2020">22.05.2020</string>
    <string name="_20_05_2020">20.05.2020</string>
    <string name="asd">-</string>
</resources>
